--- a/web/styles.css
+++ b/web/styles.css
@@ -1,13 +1,68 @@
-#digital-clock {
- background-color: #2c3131;
+#dayofweek {
+  color: white;
+  width: auto;
+  height: auto;
+  margin: auto;
+  font-size: 250px;
+  text-align: center;
+}
+
+#clock {
  color: white;
- width: 100%;
- height: 100%;
+ width: auto;
+ height: auto;
  margin: auto;
- padding-top: 50px;
- padding-bottom: 50px;
- font-family: 'Open Sans Condensed', sans-serif;
- font-size: 200px;
+ font-size: 350px;
  text-align: center;
- box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+}
+
+#timeofday {
+  color: white;
+  width: auto;
+  height: auto;
+  margin: auto;
+  font-size: 100px;
+  text-align: center;
+}
+
+#dayofmonth {
+  color: white;
+  width: 20%;
+  height: auto;
+  margin: auto;
+  font-size: 100px;
+  text-align: center;
+}
+
+#month {
+  color: white;
+  width: 60%;
+  height: auto;
+  margin: auto;
+  font-size: 100px;
+  text-align: center;
+}
+
+#year {
+  color: white;
+  width: 20%;
+  height: auto;
+  margin: auto;
+  font-size: 100px;
+  text-align: left;
+}
+
+#date {
+  color: white;
+  width: 100%;
+  height: auto;
+  margin: auto;
+  font-size: 100px;
+  text-align: center;
+}
+
+body {
+  background-color: rgb(35, 37, 39);
+  width: auto;
+  height: auto;
 }
